--- a/.classpath
+++ b/.classpath
@@ -21,6 +21,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -29,8 +30,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="src/main/java/libs/miglayout-4.0.jar"/>
-	<classpathentry kind="lib" path="src/main/java/libs/NefAnimacion_V2.1_jdk18.jar"/>
 	<classpathentry kind="lib" path="src/main/java/libs/swingx-1.6.1.jar"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
@@ -41,5 +40,10 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/java/libs/JMthos.jar"/>
 	<classpathentry kind="lib" path="src/main/java/libs/TimingFramework-0.55.jar"/>
+	<classpathentry kind="lib" path="src/main/java/libs/miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="src/main/java/libs/NefAnimacion_V2.1_jdk18.jar"/>
+	<classpathentry kind="lib" path="src/main/java/libs/jna-5.13.0.jar"/>
+	<classpathentry kind="lib" path="src/main/java/libs/timingframework-core-6.1.0.jar"/>
+	<classpathentry kind="lib" path="src/main/java/libs/timingframework-swing-6.1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
